# umpv-rust

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
res/: umpv.rc
src/: main.rs  mpv.rs  pipe.rs  registry.rs
